# magika-http

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.dockerhub.md  README.md  entrypoint.sh  generate_swagger.py  pyproject.toml  requirements.txt  swagger.json  swagger.yaml
.github/workflows/: build-and-push-dockerhub.yaml
src/: __init__.py  config.py  main.py  swagger.py
tests/: conftest.py  test_health.py  test_scan.py
